<resources>
    <string name="app_name">TodoApp</string>
    <string name="please_enter_title">Lütfen Başlık Giriniz</string>
    <string name="please_enter_description">Lütfen Açıklama Giriniz</string>
    <string name="save">Kaydet</string>
    <string name="delete">Sil</string>
    <string name="done">Tamamlandı</string>
    <string name="are_you_sure_to_delete_todo">Todo silmek istediğinize emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="please_enter_date">Tarih seçiniz</string>
    <string name="please_enter_time">Saat seçiniz</string>
    <string name="set_alarm">Alarm kur</string>
    <string name="date">Tarih</string>
    <string name="time">Saat</string>
    <string name="close_alarm">Alarmı kapat</string>
    <string name="create_todo_title">Todo Oluştur</string>
    <string name="edit_todo_title">Todo Düzenle</string>
    <string name="list_todo_title">Todos</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="idle">Idle</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="title">Başlık</string>
    <string name="description">Açıklama</string>
    <string name="new_todo">Yeni todo</string>
</resources>